hphp/hack/test/typecheck/disallow_array/literal1.php.exp
File "literal1.php", line 4, characters 8-21:
Array literals are no longer legal; use varray or darray instead (Naming[2083])
