hphp/hack/test/typecheck/disallow_array/literal1.php
<?hh

function foo(): void {
  $a = array(1, 2, 3);
}
